--- a/public/css/hdpa-public.css
+++ b/public/css/hdpa-public.css
@@ -1,4 +1,18 @@
-/**
- * All of the CSS for your public-facing functionality should be
- * included in this file.
- */
+.hdpa-btn-filter{
+	font-weight: 500;
+    padding: 6px 12px;
+    line-height: 1.3;
+    color: #fff;
+    background-color: #007bff;
+    border-radius: 3px;
+    border: none;
+    font-size: 15px;
+   	cursor: pointer;
+}
+.filter-text{
+	margin-right: 5px;
+}
+.hdpa-filter-icon{
+	width: 18px;
+	vertical-align: middle;
+}
