--- a/admin/css/hdpa-admin.css
+++ b/admin/css/hdpa-admin.css
@@ -1,4 +1,24 @@
-/**
- * All of the CSS for your admin-specific functionality should be
- * included in this file.
- */
+.hdpa-field {
+	width: 100%;
+	display: flex;
+	margin: 15px 0;
+}
+.hdpa-field label{
+	width: 140px;
+}
+.hdpa-field input,
+.hdpa-field select,
+.hdpa-field textarea{
+	width: 100%;
+}
+
+@media only screen and (min-width: 1025px) {
+	.hdpa-field {
+		width: 65%;
+	}
+	.hdpa-field input,
+	.hdpa-field select,
+	.hdpa-field textarea{
+		width: 40%;
+	}
+}
