--- a/public/css/hdpa-public.css
+++ b/public/css/hdpa-public.css
@@ -70,7 +70,7 @@
   outline: none;
 }
 .hdpa-filter-field input:focus,
-.hdpa-filter-field select:focus, 
+.hdpa-filter-field select:focus,
 .select2-container--default.select2-container--focus .select2-selection--multiple {
   border-color: #007bff;
 }
@@ -107,7 +107,7 @@
 .hdpa-filter-field-submit{
   justify-content: center;
 }
-#select2-hdpa_filter_skills-results, 
+#select2-hdpa_filter_skills-results,
 #select2-hdpa_filter_education-results{
   font-size: 12px;
 }
@@ -144,6 +144,16 @@
   width: 100%;
   margin-top: 10px;
 }
+.hdpa-profile-table tbody tr{
+  font-size: 16px;
+}
+.hdpa-profile-list-table .dataTables_wrapper .dataTables_paginate .paginate_button{
+  padding: 4px 12px;
+  font-size: 14px;
+}
+.hdpa-profile-list-table .dataTables_info{
+  font-size: 14px;
+}
 .hdpa-datatable {
   border-collapse: collapse;
   width: 100%;
@@ -179,13 +189,31 @@
   font-weight: bold;
   padding-left: 20px;
 }
+div.dataTables_processing{
+  width: 100%;
+  top: 25px;
+  left: 100px;
+  height: 100%;
+  background: rgb(0 0 0 / 37%);
+  z-index: 999999;
+}
+div.dataTables_processing>div:last-child{
+  top: 44%;
+}
 /* datatable style end */
 
+/* media queries */
 @media only screen and (min-width: 1025px) {
   .hdpa-col-two {
-    width: calc( 50% - 10px);
+	width: calc( 50% - 10px);
   }
   .hdpa-filter-field-ratings{
-    margin-top: 9px;
+	margin-top: 9px;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .hdpa-prfile-table-wrap{
+	overflow-x: auto;
   }
 }
